--- a/visual_assignment.ipynb
+++ b/visual_assignment.ipynb
@@ -395,7 +395,7 @@
     "    t = folium.FeatureGroup(name='Larceny/Theft')\n",
     "    t.add_children(MarkerCluster(locations=locations))\n",
     "    mapa.add_children(t)\n",
-    "    mapa.create_map(\"dui.html\")\n",
+    "    mapa.create_map(\"theft.html\")\n",
     "HTML('<iframe src=\"theft.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>')\n"
    ]
   },
@@ -423,7 +423,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src=\"dui.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>"
+       "<iframe src=\"./dui.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -458,7 +458,7 @@
     "    t.add_children(MarkerCluster(locations=locations))\n",
     "    mapa.add_children(t)\n",
     "    mapa.create_map(\"dui.html\")\n",
-    "HTML('<iframe src=\"dui.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>')\n"
+    "HTML('<iframe src=\"./dui.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>')\n"
    ]
   }
  ],
