--- a/visual_assignment.ipynb
+++ b/visual_assignment.ipynb
@@ -396,6 +396,7 @@
     "    t.add_children(MarkerCluster(locations=locations))\n",
     "    mapa.add_children(t)\n",
     "    mapa.create_map(\"theft.html\")\n",
+    "    print \"Creating the Map\"",
     "HTML('<iframe src=\"theft.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>')\n"
    ]
   },
@@ -458,6 +459,7 @@
     "    t.add_children(MarkerCluster(locations=locations))\n",
     "    mapa.add_children(t)\n",
     "    mapa.create_map(\"dui.html\")\n",
+    "    print \"Creating the Map\"",
     "HTML('<iframe src=\"./dui.html\" style=\"width: 100%; height: 510px; border: none\"></iframe>')\n"
    ]
   }
